added roadmap Add health settings to menu Remove veloviewer links in menu Cleaning Change folder pages to options HrZones explanation base Allow 125 %HRR to be set in last zone Allow input switch with SHIFT/TAB Refactor avoidInputKey as a angular service Remove debug mode Better custom hr zones style Reset hrZones Fix "old and new hrZones are equals when the tab is loaded", this create a useless Save() UserSettings default zones update value Check compliant hrZones before save, then save if ok Custom zones and explanations (lorem) side by side

--- a/hook/extension/manifest.json
+++ b/hook/extension/manifest.json
@@ -30,7 +30,7 @@
         "48": "icons/48.png",
         "128": "icons/128.png"
     },
-    "options_page": "pages/app/index.html",
+    "options_page": "options/app/index.html",
     "content_security_policy": "script-src 'self' 'unsafe-eval' ; object-src 'self'",
     "permissions": [
         "*://www.strava.com/*",
@@ -42,7 +42,7 @@
         "js/processors/*",
         "js/modifiers/*",
         "js/*",
-        "pages/*",
+        "options/*",
         "icons/*"
     ],
     "externally_connectable": {
